--- a/build.gradle
+++ b/build.gradle
@@ -216,8 +216,8 @@ dependencies {
 
     //RUNTIME
     runtimeOnly fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}")
-//    runtimeOnly fg.deobf("maven.modrinth:create-clockwork:1.20.1-0.1.16")
-//    runtimeOnly fg.deobf("maven.modrinth:architectury-api:9.2.14+forge")
+    runtimeOnly fg.deobf("maven.modrinth:create-clockwork:1.20.1-0.1.16")
+    runtimeOnly fg.deobf("maven.modrinth:architectury-api:9.2.14+forge")
     runtimeOnly fg.deobf("maven.modrinth:jade-addons-forge:5.3.1+forge")
     //runtimeOnly fg.deobf("curse.maven:rubidium-574856:4494903")
     //runtimeOnly fg.deobf("curse.maven:ctm-267602:3933537")
